[gd_scene load_steps=3 format=3 uid="uid://chmjilbxey7jb"]

[ext_resource type="Script" uid="uid://b2mk71viqrdg7" path="res://PulangSandata/Army/UI/ArmySelection.gd" id="1_lye0g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wbq4g"]
bg_color = Color(0, 0.027451, 0.145098, 1)

[node name="ArmySelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -320.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lye0g")

[node name="Bg" type="Panel" parent="."]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wbq4g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Select Army"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ArmyContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="CancelConfirmContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Cancel" type="Button" parent="VBoxContainer/CancelConfirmContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Cancel"

[node name="CommandText" type="Label" parent="VBoxContainer/CancelConfirmContainer"]
layout_mode = 2
text = "Command: "

[node name="Command" type="Label" parent="VBoxContainer/CancelConfirmContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Confirm" type="Button" parent="VBoxContainer/CancelConfirmContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Confirm"

[connection signal="pressed" from="VBoxContainer/CancelConfirmContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/CancelConfirmContainer/Confirm" to="." method="_on_confirm_pressed"]
